# ior-curved

./: CMakeLists.txt  External.cmake  README.md
atmospheres/: atmosphere.h  gutierrez2006.h  simple.h  strange.h
eq/: fermat.h
main/: 3d_cone_graph.cc  atmosphere.cc  atmosphere_cone.cc  height_graph.cc  ior.cc  rho_ch_cone_graph.cc  rho_graph.cc  trajectory.cc  zenith_rho_graph.cc
solvers/: ivp.h  layered.h  solver.h  straight.h
xml/: all_atmospheres.xml  all_solvers.xml  atmosphere_escape.xml  solvers_escape.xml
